data/derived/sp14/progs/unify/prog3027.ml.out
Characters 23-25:
  let _ = fixpoint (sin, 4. * pi);;
                         ^^
Error: This expression has type float but an expression was expected of type
         int
